--- a/index.html
+++ b/index.html
@@ -1,29 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
 
-		<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
+<head>
+  <meta charset="utf-8">
+
+  <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
 		Remove this if you use the .htaccess -->
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-		<title>Snake</title>
-		<meta name="description" content="">
-		<meta name="author" content="satur">
+  <title>Snake</title>
+  <meta name="description" content="">
+  <meta name="author" content="satur">
 
-		<meta name="viewport" content="width=device-width; initial-scale=1.0">
+  <meta name="viewport" content="width=device-width; initial-scale=1.0">
 
-		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
-		<link rel="shortcut icon" href="/favicon.ico">
-		<link rel="apple-touch-icon" href="/apple-touch-icon.png">
-	</head>
-	<style>
-		canvas {
-			border: 1px solid black;
-		}
-	</style>
-	<body onkeydown="control(event);">
-		<script src="snake.js"></script>
-		<canvas id="canvas" width="600" height="600"></canvas>
-	</body>
+  <!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
+  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+</head>
+<style>
+  canvas {
+    border: 2px solid black;
+    background: #717676;
+  }
+</style>
+
+<body onkeydown="control(event);">
+  <script src="snake.js"></script>
+  <center>
+    <h1 style="color: green;">SNAKE 🐍</h1>
+    <h2>Usa Las Flechas Del Teclado Para Jugar!</h1>
+      <canvas id="canvas" width="600" height="600"></canvas>
+      <p>By: NoBody</p>
+  </center>
+</body>
+
 </html>
